--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -5,3 +5,13 @@ logout: Logout
 sign_in: Sign In
 sign_up: Sign Up
 tournaments: Tournaments
+
+solution:
+  date: Date
+  author: Author
+  problem: Problem
+  language: Language
+  result: Result
+  test: Test
+  time: Time
+  memory: Memory
