--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -5,6 +5,11 @@ logout: Logout
 sign_in: Sign In
 sign_up: Sign Up
 tournaments: Tournaments
+second: second
+statement: Statement
+send: Send
+statistics: Statistics
+discussion: Discussion
 
 solution:
   date: Date
