--- a/app/Resources/translations/messages.ru.yml
+++ b/app/Resources/translations/messages.ru.yml
@@ -5,3 +5,8 @@ logout: Выход
 sign_in: Авторизация
 sign_up: Регистрация
 tournaments: Турниры
+second: секунда
+statement: Условие
+send: Отправка
+statistics: Статистика
+discussion: Обсуждения
