create migration for extension

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -1,7 +1,7 @@
 problems_archive: Problems archive
 system_status: System status
 rating: Rating
-logout: Logoutting
+logout: Logout
 sign_in: Sign In
 sign_up: Sign Up
 tournaments: Tournaments
