--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -31,3 +31,6 @@ problem_statistics:
   accepted_solutions_count: Accpeted solutions count
   solutions_sent_users_count: Solutions sent users count
   solved_users_count: Solved users count
+
+user:
+  last_login: Last Login
